--- a/Snakemake-Essentials.qmd
+++ b/Snakemake-Essentials.qmd
@@ -191,15 +191,18 @@ flowchart LR
 
 
 # Wildcards
-Wildcards are a big part of how we can expand and generalize how our snakemake pipeline works. Consider a wildcards to be a list of values you want to run a snakemake rule for, like a for loop: 
 
+## About wildcards
+Wildcards are a big part of how we can expand and generalize how our snakemake pipeline works. Consider a wildcards to be a list of values for which you want to run a snakemake rule multiple times. This is a bit like a `for` loop: 
 ```{python}
 #| eval: false
 for value in wildcards: 
     run rule...
 ```
 
-We can expand a rule using wildcards by expanding the input to a rule that requires this rule's output. For example:
+## Syntax
+### One wildcard
+We can expand a rule using wildcards by `expand()`ing the input to a rule that requires this rule's output. For example:
 ```snakemake
 rule all:
     input:
@@ -223,6 +226,31 @@ flowchart LR
   C[file_3] --> F(all)
 ```
 
+### About the syntax
+All you need for a wildcard is a list, which you pass to the `expand()` function. The first argument in the expand function is your filepath string, with the wildcard in `{curly brackets}`. Then, you pass the list to use for expanding the filepath. In the previous example, the `sample=["1","2","3"]` defines the values of the wildcard `sample` in `file_{sample}.txt`. 
+
+### Generalizing even more with multiple wildcards
+This doesn't have to be `sample`, and you can have multiple wildcards in an `expand()` function. Imagine you're plating a 5-course meal for 3 people - your snakefile would look like this:
+
+```snakemake
+course_numbers=["1","2","3","4","5"]
+people=["John", "Madi", "Casey"]
+
+rule all:
+    expand("course_{course_number}_for_{person}.plate",
+           course_number=course_numbers,
+           person=people)
+
+rule make_food:
+    ouput:
+        "course_{course_number}_for_{person}.plate"
+    shell:
+        """
+        make food...
+        """
+```
+
+## Wildcards to run snakemake rules for each sample
 This is a *very* common use for wildcards! We often use wildcards we want to run the same rules for each sample. This is one of the ways Snakemake starts to shine. If you have a metadata file with 500 sample IDs, you can read that list of sample IDs into Snakemake using Python/Pandas, then run your snakemake pipeline for all samples. This is what that looks like:
 
 ```snakemake
