--- a/Cluster-friendly-Snakemake.qmd
+++ b/Cluster-friendly-Snakemake.qmd
@@ -37,24 +37,58 @@ Which could be run with the following command:
 sbatch trim_reads.sbatch
 ```
 
+## Using Snakemake to automate batch job submission
+This works well for single jobs, but again, when things start to scale up (50 samples, 10 steps per sample, etc..), this can become cumbersome. 
+
+### Story time
+When I was new to working on clusters, I found myself writing python scripts to loop through each of my samples, find their files, then run sbatch scripts that had to parse/sanitize multiple parameters. I certainly could have done this more simply, but it quickly snowballed into a 50-150 line python script with a >25 line sbatch script per step, leading to a >>1000 line codebase for a project with just a few processing steps. The last straw was when I needed to go back and run step 1 with new parameters, meaning I had to manually rerun every following step (after waiting for all samples to finish each step).
+
+Using Snakemake, to manage I was able to reduce this codebase by ~70% and reduce my manual input by ~50%. To quote Casey Martin, "Compute flops are cheap and nearly unlimited at our level; human flops are expensive and limited," so we need to prioritize efficiency in our human flops, using tools like Snakemake.
+
+### Snakemake + Slurm
+My favorite part of using Snakemake has been that once a Slurm profile is set up, it will handle all of the `sbatch` job submission for you. This "profile" is really just a little tool that creates the `.sbatch` script, submits it, logs output/error, and monitors completion. In your Snakefile, you can specify resource requirements and conda environment, such that the previous script would look like this:
+
+```{snakemake}
+rule trim_fastq:
+    input:
+        "raw_reads.fq"
+    output:
+        "trimmed_reads.fq"
+    resources:
+        partition="short",
+        mem_mb=8000,
+        runtime=120 #min
+    threads: 1
+    conda: "seqtk_env"
+    shell:
+        """
+        seqtk trimfq -b 10 -e 5 {input} > {output}
+        """
+```
+
+In this case it doesn't look much more concise, but it is much easier to generalize this rule to run multiple samples/parameters, and to chain multiple samples together. Most importantly, it's easier to read and debug! 
+
+> “Programs must be written for people to read, and only incidentally for machines to execute.”
+― Harold Abelson, Structure and Interpretation of Computer Programs
+
 
 # Setting up a SLURM profile
-This section will explain how to set up a SLURM profile to integrate Snakemake with the job scheduling system, SLURM.
+This section will explain how to set up a profile to integrate Snakemake with the job scheduling system, Slurm.
 
 ## Why it matters
-SLURM profiles are advantageous because they manage submission/monitoring of each step in your Snakemake pipeline as separate batch jobs. For example, if you have 50 samples to process through 2 rules, the SLURM profile will submit/monitor each rule & sample combination as a separate job, so: 
+Slurm profiles are advantageous because they manage submission/monitoring of each step in your Snakemake pipeline as separate batch jobs. For example, if you have 50 samples to process through 10 rules, the SLURM profile will submit/monitor each rule & sample combination as a separate job, so: 
 
   1. These jobs can run in parallel, with unique resource requirements for each job.
   2. It is easy to monitor the job status for each unique sample/step.
   3. If one fails, the others will keep going. 
 
-Without a SLURM profile, Snakemake would try to run each job sequentially within the batch job that you've submitted to run Snakemake, and this could get cumbersome. Additionally, imagine step 1 requires 2 GB of memory, but step 2 requires 100 GB memory. Without submitting individual batch jobs for each step/sample, you would have to request 100 GB memory for the full duration, which would result in a waste of resources on the shared cluster while the first step is running. 
+Without a Slurm profile, Snakemake would try to run each job sequentially within the batch job that you've submitted to run Snakemake, and this could get cumbersome. Additionally, imagine step 1 requires 2 GB of memory, but step 2 requires 100 GB memory. Without submitting individual batch jobs for each step/sample, you would have to request 100 GB memory for the full duration, which would result in a waste of resources on the shared cluster while the first step is running. 
 
 ## Using cookiecutter
 ### About the profile
-I recommend using the [official Snakemake SLURM profile](https://github.com/Snakemake-Profiles/slurm), which you can install using [cookiecutter](https://cookiecutter.readthedocs.io/en/stable/README.html). This profile manages job submission and monitors submitted jobs. 
+I recommend using the [official Snakemake Slurm profile](https://github.com/Snakemake-Profiles/slurm), which you can install using [cookiecutter](https://cookiecutter.readthedocs.io/en/stable/README.html). This profile manages job submission and monitors submitted jobs. 
 
-If you plan on running a Snakemake pipeline with **many many** steps that do not take very long to run (i.e., you're submitting tens of thousands of jobs that run quickly, such that the submission is the bottleneck), you may want to check out John Blischak's [simple Snakemake SLURM profile](https://github.com/jdblischak/smk-simple-slurm), which is does not have as many status checks and submits jobs much faster. If job submission isn't a bottleneck, it's best to use the official Snakemake SLURM profile ([use speed with caution](https://github.com/jdblischak/smk-simple-slurm#use-speed-with-caution)). 
+If you plan on running a Snakemake pipeline with **many many** steps that do not take very long to run (i.e., you're submitting tens of thousands of jobs that run quickly, such that the submission is the bottleneck), you may want to check out John Blischak's [simple Snakemake Slurm profile](https://github.com/jdblischak/smk-simple-slurm), which is does not have as many status checks and submits jobs much faster. If job submission isn't a bottleneck, it's best to use the official Snakemake SLURM profile ([use speed with caution](https://github.com/jdblischak/smk-simple-slurm#use-speed-with-caution)). 
 
 ### Installating cookiecutter
 In your Snakemake Conda environment:
