add how to pass resources from config in rules

--- a/Cluster-friendly-Snakemake.qmd
+++ b/Cluster-friendly-Snakemake.qmd
@@ -135,9 +135,80 @@ rule parallelizable_job:
         mem_mb=int(8*1000), # 8 GB
         runtime=int(2*60), # min, or 2 hours
         slurm="mail-user=<email_address>@colorado.edu"
-    threads: 1
+    threads: 8
     shell:
         """
         run_parallelizable_task --threads {threads} --max_memory {resources.mem_mb}
         """
 ```
+
+Additionally, you can generally pass any "long format" names for [Slurm parameters](https://slurm.schedmd.com/sbatch.html) in your `resources.slurm` string. More details on that formatting can be found [here](https://github.com/Snakemake-Profiles/slurm#rule-specific-resource-configuration).
+
+## Rules from a config file
+### Passing a config file to Snakemake
+It's recommended to provide rule-specific resources in a config file. Config files for Snakemake are `.yaml` format, and they should be specified when running Snakemake from the command line, as such:
+```
+snakemake --profile ~/.config/snakemake/slurm --config Snakemake_config.yaml
+```
+
+### Using a config for resources
+Once a config file has been provided to Snakemake, it will recognize the variable `config` in your snakefile, which is a Python [dictionary](https://docs.python.org/3/tutorial/datastructures.html#dictionaries).
+
+If your config file looks like this:
+```
+parallelizable_job_threads: 8
+parallelizable_job_mem_mb: 8000
+```
+
+Your Snakemake rule can be written as such:
+```{snakemake}
+rule parallelizable_job:
+    input:
+        "raw_reads.fq"
+    output:
+        "trimmed_reads.fq"
+    resources:
+        partition="<partition_name>",
+        mem_mb=config.get("parallelizable_job_mem_mb"), # 8 GB
+        runtime=int(2*60), # min, or 2 hours
+        slurm="mail-user=<email_address>@colorado.edu"
+    threads: config.get("parallelizable_job_threads")
+    shell:
+        """
+        run_parallelizable_task --threads {threads} --max_memory {resources.mem_mb}
+        """
+```
+
+### Sanitizing config resources
+I personally like to set default resources for each rule in my Snakefile and sanitize the config resources. I'm not sure if it's "best practices", but it feels safer. For example, if I accidentally delete the memory param from my config, I don't want the Snakemake to instead pass the default memory param to Slurm. 
+
+#### Story time - don't forget the resource requirements!!
+I did this once when reconstructing genomes from metagenomes (MAGs) using MetaSPAdes, which needed ~150GB per sample, but I accidentally deleted the memory requirement in my config file, and Snakemake submitted 50 jobs to Slurm, requesting the default of 8GB per sample. Slurm scheduled all of these jobs on two compute nodes with 500GB total RAM, thinking I needed ~400GB total, but I really needed ~7500GB, and I crashed these compute nodes and received a scary email from the cluster admins. Learn from my mistakes!
+
+#### How I avoid issues
+I write functions such as this one to handle the resources I'm passing to each rule:
+```{python}
+#| eval: false
+def get_threads(rule_default, config, rule_name):
+    config_param = config.get(f"{rule_name}_threads")
+    if config_param is not None:
+        return int(config_param)
+
+    return rule_default
+```
+
+And my rule would look like this:
+```
+rule my_rule:
+    output:
+        "out_file.txt"
+    threads: get_threads(rule_default=1, config, "my_rule")
+    shell:
+        """
+        do things...
+        """
+```
+
+This function looks for rule-specific threads in the config, formatted as "<rule_name>_threads".  If that exists, it will use the rule-specific threads from the config, but if not, we already have a default rule-specific number of threads specified. I like this structure because it keeps my config file concise while still maintaining the ability to alter rules' resources. 
+
+If you have a better way to do this, feel free to open an issue/pull request, and I can add it!
